Scoping IBM font to resume page, tweaking sphere animation location on mobile, fixing breakpoint check functions, improving menu animation

--- a/wp-content/themes/minimal/assets/sass/_mixins.scss
+++ b/wp-content/themes/minimal/assets/sass/_mixins.scss
@@ -36,7 +36,8 @@ $desktop-large-width: 1200px;
 }
 
 @mixin headingFont {
-	font-family: 'Open Sans', sans-serif;
+	//font-family: 'Open Sans', sans-serif;
+	font-family: 'Quicksand', sans-serif;
 	color: $link-color;
 	font-size: 32px;
 	
